# distributionalize

./: .gitignore  README.md  pyproject.toml
src/distrilize/: __init__.py  distrilize.py
